<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo">

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="176dp"
        android:background="@color/add_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/logout_button"
        android:layout_width="59dp"
        android:layout_height="116dp"
        android:layout_marginStart="336dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#00FFFFFF"
        android:rotationY="180"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="71dp"
        android:layout_height="91dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_user"
        app:tint="@color/marron_titulos" />

    <Button
        android:id="@+id/your_posts_button"
        android:layout_width="206dp"
        android:layout_height="79dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="176dp"
        android:backgroundTint="@color/profile_seleccionado"
        android:text="@string/your_posts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="536dp"
        android:backgroundTint="@color/add_post"
        android:text="@string/add_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="76dp"
        android:text="@string/username"
        android:textColor="@color/marron_titulos"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saved_button"
        android:layout_width="201dp"
        android:layout_height="79dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="176dp"
        android:backgroundTint="@color/login_fondo_profile_sin_select"
        android:text="@string/saved"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>