<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo">

    <!-- Profile Header (e.g., Image, Logout Button, etc.) -->
    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="176dp"
        android:background="@color/add_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Your posts and saved buttons -->
    <Button
        android:id="@+id/your_posts_button"
        android:layout_width="206dp"
        android:layout_height="79dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/profile_seleccionado"
        android:text="@string/your_posts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" /> <!-- Constrain below the view -->

    <Button
        android:id="@+id/saved_button"
        android:layout_width="201dp"
        android:layout_height="79dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/login_fondo_profile_sin_select"
        android:text="@string/saved"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" /> <!-- Constrain below the view -->


    <Button
        android:id="@+id/add_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="536dp"
        android:backgroundTint="@color/add_post"
        android:text="@string/add_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- RecyclerView constrained to avoid overlap -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/your_posts_button"
        app:layout_constraintBottom_toTopOf="@+id/add_post_button"/> <!-- Ends at the bottom -->


</androidx.constraintlayout.widget.ConstraintLayout>